Squish a couple of property bugs.

--- a/scss/grid/_grid.scss
+++ b/scss/grid/_grid.scss
@@ -9,8 +9,7 @@
   }
 
   @include element('row') {
-    flex: 0 1 auto;
-    flex-direction: row;
+    display: flex;
     flex-wrap: wrap;
 
     @include modifier('reverse') {
