--- a/scss/tools/mixins/_selectors-for-width.scss
+++ b/scss/tools/mixins/_selectors-for-width.scss
@@ -32,7 +32,7 @@
     text-align: center;
   }
 
-  .grid__row--#{$width}-end {
+  .grid__row-#{$width}--end {
     justify-content: flex-end;
   }
 
